--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ Thumbs.db
 *.tar
 *.zip
 
+# ignore vim swap files
+*.swp
+*.swo
+
 # ignore everything in the "wp-content" directory, except:
 # "mu-plugins" directory
 # "plugins" directory
